# sportsee-rag

./: .env.example  .gitignore  README.md  build_vector_db.py  evaluate_ragas.py  github_setup.md  indexer.py:Zone.Identifier  ingest_text_archives.py  load_excel_to_db.py  progress_log.txt  pyproject.toml  requirements.txt  test_rag_queries.py  verification_report.md
.github/workflows/: main.yml
docker/: Dockerfile
inputs/: Reddit-1.md  Reddit-2.md  Reddit-3.md  Reddit-4.md
livrables/: Jaziri_Iyed_1_README_122025.md  Jaziri_Iyed_2_scripts_evaluation_122025.py  Jaziri_Iyed_3_scripts_preparation_donnees_122025.py  Jaziri_Iyed_5_rapport_evaluation_122025.md
src/api/: main.py  routes.py
src/core/: config.py  logging.py
src/data/: ingestion.py  models.py  schemas.py
src/monitoring/: drift.py
src/rag/: chain.py  classifier.py  mistral_wrapper.py  sql_tool.py  vector_store.py
src/utils/: docling_converter.py
tests/unit/: test_api.py
vector_db/: index.faiss  index.pkl
