[tool.poetry]
name = "sportsee-rag"
version = "0.1.0"
description = "SportSee Basketball RAG System Upgrade"
authors = ["Lead MLOps <mlops@sportsee.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-community = "^0.0.16"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
logfire = "^0.4.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
sqlalchemy = "^2.0.0"
evidently = "^0.4.0"
python-dotenv = "^1.0.0"
ragas = "^0.1.0"
faiss-cpu = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
