[tool.poetry]
name = "sportsee-rag"
version = "0.1.0"
description = "SportSee Basketball RAG System Upgrade"
authors = ["Lead MLOps <mlops@sportsee.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
langchain = "^0.3.0"
langchain-mistralai = "^0.2.0"
mistralai = "^0.4.2"
langchain-community = "^0.3.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
logfire = "^0.46.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
sqlalchemy = "^2.0.0"
evidently = "^0.4.0"
python-dotenv = "^1.0.0"
ragas = "^0.1.0"
faiss-cpu = "^1.7.4"
pypdf = "^6.4.1"
docling = "^2.64.0"
unstructured = "^0.18.21"
markdown = "^3.10"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
